k8s/data-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
        - name: data
          image: batmandocode/data
---
apiVersion: v1
kind: Service
metadata:
  name: data-srv
spec:
  selector:
    app: data
  ports:
    - name: data
      protocol: TCP
      port: 4001
      targetPort: 4001
