k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /api/data
            backend:
              serviceName: data-srv
              servicePort: 4001
          - path: /api/posts
            backend:
              serviceName: posts-srv
              servicePort: 4002
          - path: /?(.*)
            backend: 
              serviceName: client-srv
              servicePort: 3000
